Fixed projects alignment

--- a/style/pages/indexPage.less
+++ b/style/pages/indexPage.less
@@ -12,4 +12,8 @@
       background: #DDD;
     }
   }
+
+  .grid {
+    margin-top: 10px;
+  }
 }
