--- a/style/pages/projectPage.less
+++ b/style/pages/projectPage.less
@@ -23,4 +23,8 @@
       background: #DDD;
     }
   }
+
+  .grid {
+    margin-top: 10px;
+  }
 }
